Update section header to be clearer about section contents

--- a/draft/draft-bensley-rpsl-exclude-members.html
+++ b/draft/draft-bensley-rpsl-exclude-members.html
@@ -1304,7 +1304,7 @@ li > p:last-of-type:only-child {
                 <p id="section-toc.1-1.1.2.2.1" class="keepWithNext"><a href="#section-1.2" class="auto internal xref">1.2</a>.  <a href="#name-existing-methods-of-exclusi" class="internal xref">Existing Methods of Exclusion</a></p>
 </li>
               <li class="compact toc ulBare ulEmpty" id="section-toc.1-1.1.2.3">
-                <p id="section-toc.1-1.1.2.3.1" class="keepWithNext"><a href="#section-1.3" class="auto internal xref">1.3</a>.  <a href="#name-missing-methods-of-exclusio" class="internal xref">Missing Methods of Exclusion</a></p>
+                <p id="section-toc.1-1.1.2.3.1" class="keepWithNext"><a href="#section-1.3" class="auto internal xref">1.3</a>.  <a href="#name-the-need-for-additional-exc" class="internal xref">The Need for Additional Exclusion Control</a></p>
 </li>
               <li class="compact toc ulBare ulEmpty" id="section-toc.1-1.1.2.4">
                 <p id="section-toc.1-1.1.2.4.1"><a href="#section-1.4" class="auto internal xref">1.4</a>.  <a href="#name-requirements-language" class="internal xref">Requirements Language</a></p>
@@ -1452,10 +1452,10 @@ members: AS65003
 <p id="section-1.2-4">There is currently no method to exclude either an aut-num, an as-set, or a route-set, which was included by the greedy logic of the <code>(mp-)members</code> attribute of an as-set or route-set object.<a href="#section-1.2-4" class="pilcrow">¶</a></p>
 </section>
 </div>
-<div id="missing-methods-of-exclusion">
+<div id="the-need-for-additional-exclusion-control">
 <section id="section-1.3">
-        <h3 id="name-missing-methods-of-exclusio">
-<a href="#section-1.3" class="section-number selfRef">1.3. </a><a href="#name-missing-methods-of-exclusio" class="section-name selfRef">Missing Methods of Exclusion</a>
+        <h3 id="name-the-need-for-additional-exc">
+<a href="#section-1.3" class="section-number selfRef">1.3. </a><a href="#name-the-need-for-additional-exc" class="section-name selfRef">The Need for Additional Exclusion Control</a>
         </h3>
 <p id="section-1.3-1">The existing greedy logic of the <code>(mp-)members</code> attribute of as-sets and route-sets, coupled with the inability to alter this logic, can result in various undesired effects for operators. A non-exhaustive list of possible undesirable outcomes follows:<a href="#section-1.3-1" class="pilcrow">¶</a></p>
 <ol start="1" type="1" class="normal type-1" id="section-1.3-2">
