--- a/draft/draft-bensley-rpsl-exclude-members.html
+++ b/draft/draft-bensley-rpsl-exclude-members.html
@@ -1563,13 +1563,13 @@ and "<span class="bcp14">OPTIONAL</span>" are to be interpreted as described in 
         <h3 id="name-attribute-validation">
 <a href="#section-2.3" class="section-number selfRef">2.3. </a><a href="#name-attribute-validation" class="section-name selfRef">Attribute Validation</a>
         </h3>
-<p id="section-2.3-1">When an authoritative IRR registry processes an as-set or route-set object with the <code>excl-members</code> attribute present, it <span class="bcp14">MUST</span> validate the contents of the attribute.<a href="#section-2.3-1" class="pilcrow">¶</a></p>
+<p id="section-2.3-1">When an authoritative IRR registry processes the creation or update of an as-set or route-set object with the <code>excl-members</code> attribute present, it <span class="bcp14">MUST</span> validate the contents of the attribute.<a href="#section-2.3-1" class="pilcrow">¶</a></p>
 <div id="registry-scoped-keys-only">
 <section id="section-2.3.1">
           <h4 id="name-registry-scoped-keys-only">
 <a href="#section-2.3.1" class="section-number selfRef">2.3.1. </a><a href="#name-registry-scoped-keys-only" class="section-name selfRef">Registry Scoped Keys Only</a>
           </h4>
-<p id="section-2.3.1-1">All primary keys in <code>excl-members</code> <span class="bcp14">MUST</span> have a registry scope provided with the exception of an AS number.<a href="#section-2.3.1-1" class="pilcrow">¶</a></p>
+<p id="section-2.3.1-1">All primary keys in <code>excl-members</code> <span class="bcp14">MUST</span> have a registry scope provided, with the exception of an aut-num primary key.<a href="#section-2.3.1-1" class="pilcrow">¶</a></p>
 <p id="section-2.3.1-2">By requiring registry scoped as-set and route-set keys to be used in the <code>excl-members</code> attribute, it becomes possible to have multiple references to the same RPSL primary key. This is not permitted, and IRR registry software <span class="bcp14">MUST</span> reject this:<a href="#section-2.3.1-2" class="pilcrow">¶</a></p>
 <span id="name-invalid-object-fragment-usi"></span><figure id="figure-2">
             <div class="lang-rpsl sourcecode" id="section-2.3.1-3.1">
@@ -1581,7 +1581,7 @@ excl-members: RIPE::AS-EXAMPLE, ARIN::AS-EXAMPLE
 <a href="#name-invalid-object-fragment-usi" class="selfRef">Invalid object fragment using multiple registry prefixes with the same RPSL primary key</a>
             </figcaption></figure>
 <p id="section-2.3.1-4">The IRR registry software <span class="bcp14">MUST</span> verify that without their registry prefix, all references from <code>excl-members</code> are unique.<a href="#section-2.3.1-4" class="pilcrow">¶</a></p>
-<p id="section-2.3.1-5">If allowed, the attribute <code>excl-members: RIPE::AS-EXAMPLE, ARIN::AS-EXAMPLE</code> would refer to two different set objects, whereas the <code>(mp-)members</code> attribute can only contain one instance of <code>AS-EXAMPLE</code>, which is ambiguous as to which set this refers to when sets exist in multiple registries with the same primary key.<a href="#section-2.3.1-5" class="pilcrow">¶</a></p>
+<p id="section-2.3.1-5">If allowed, the attribute <code>excl-members: RIPE::AS-EXAMPLE, ARIN::AS-EXAMPLE</code> would refer to two different set objects, whereas the <code>(mp-)members</code> attribute can only contain one instance of <code>AS-EXAMPLE</code>, which creates ambiguity regarding which set the exclusion refers to, when sets exist in multiple registries with the same primary key.<a href="#section-2.3.1-5" class="pilcrow">¶</a></p>
 <p id="section-2.3.1-6">Similarly, the IRR software <span class="bcp14">MUST NOT</span> allow for the registry scopes in the <code>excl-members</code> attribute and the <code>src-members</code> attribute to be mixed, when both attributes are populated on the same set object, and when they referencing the same primary key with the registry scope removed.<a href="#section-2.3.1-6" class="pilcrow">¶</a></p>
 <span id="name-invalid-object-fragment-usin"></span><figure id="figure-3">
             <div class="lang-rpsl sourcecode" id="section-2.3.1-7.1">
@@ -1602,8 +1602,8 @@ excl-members: RIPE::AS-EXAMPLE
           <h4 id="name-any-primary-key-and-registr">
 <a href="#section-2.3.2" class="section-number selfRef">2.3.2. </a><a href="#name-any-primary-key-and-registr" class="section-name selfRef">Any Primary Key and Registry Scope</a>
           </h4>
-<p id="section-2.3.2-1">The IRR software <span class="bcp14">MUST NOT</span> require that the primary key of an entry in the <code>excl-members</code> attribute is a direct member of the object being updated. The <code>excl-members</code> attribute is used to exclude objects anywhere in the hierarchy, starting from the point of definition.<a href="#section-2.3.2-1" class="pilcrow">¶</a></p>
-<p id="section-2.3.2-2">The IRR software <span class="bcp14">MUST NOT</span> require that the registry scope which precedes the object primary key, is a registry the IRR software knows to be a valid registry. An authoritative IRR server may have it's content mirrored to resolver IRR servers, which have visibility of many more registries.<a href="#section-2.3.2-2" class="pilcrow">¶</a></p>
+<p id="section-2.3.2-1">The IRR software <span class="bcp14">MUST NOT</span> require that the primary key of an entry in the <code>excl-members</code> attribute is also a direct member of the object being created or updated. The <code>excl-members</code> attribute is used to exclude objects anywhere in the hierarchy, starting from the point of definition, moving downwards within the hierarchy. This is because the object to be excluded, might be being included by a member, of a member, of a member, for example.<a href="#section-2.3.2-1" class="pilcrow">¶</a></p>
+<p id="section-2.3.2-2">When creating or updating an object with the <code>excl-members</code> attribute, the authoritative IRR software <span class="bcp14">MUST NOT</span> require that the registry scope which precedes the object primary key, is a registry the IRR software knows to be a valid registry. An authoritative IRR server may have it's content mirrored to resolver IRR servers, which have visibility of many more registries.<a href="#section-2.3.2-2" class="pilcrow">¶</a></p>
 </section>
 </div>
 </section>
@@ -1620,7 +1620,7 @@ excl-members: RIPE::AS-EXAMPLE
         <h3 id="name-the-as-set-class-2">
 <a href="#section-3.1" class="section-number selfRef">3.1. </a><a href="#name-the-as-set-class-2" class="section-name selfRef">The as-set Class</a>
         </h3>
-<p id="section-3.1-1">When the <code>excl-members</code> attribute is populated on an as-set object, the primary keys stored in the attribute reference aut-nums or as-sets that <span class="bcp14">MUST NOT</span> be resolved when recursively resolving the members of that as-set object.<a href="#section-3.1-1" class="pilcrow">¶</a></p>
+<p id="section-3.1-1">When the <code>excl-members</code> attribute is populated on an as-set object, the primary keys stored in the attribute reference aut-nums or as-sets that <span class="bcp14">MUST NOT</span> be resolved by a resolving IRR server, when recursively resolving the members of that as-set object.<a href="#section-3.1-1" class="pilcrow">¶</a></p>
 <ol start="1" type="1" class="normal type-1" id="section-3.1-2">
 <li id="section-3.1-2.1">
             <p id="section-3.1-2.1.1">This exclusion applies to the <code>members</code> attribute of the as-set object which has the <code>excl-members</code> attribute populated, and the <code>members</code> attribute of all recursively resolved as-sets within that set. Because the RPSL primary keys stored in the <code>excl-members</code> attribute have a registry scope prepended, the primary keys in the <code>members</code> attribute <span class="bcp14">MUST</span> be checked against all keys in the <code>excl-members</code> attribute with the registry scope removed.<a href="#section-3.1-2.1.1" class="pilcrow">¶</a></p>
@@ -1658,7 +1658,7 @@ source: ARIN
 <figcaption><a href="#figure-4" class="selfRef">Figure 4</a>:
 <a href="#name-an-example-as-set-hierarchy" class="selfRef">An example as-set hierarchy, in it's unresolved state</a>
           </figcaption></figure>
-<p id="section-3.1-5">The figure below shows the result of resolving the members of set <code>AS-EXAMPLE-1</code> when the <code>excl-members</code> logic is applied:<a href="#section-3.1-5" class="pilcrow">¶</a></p>
+<p id="section-3.1-5">The figure below shows the result from a resolving IRR server having resolved the members of set <code>AS-EXAMPLE-1</code> when the <code>excl-members</code> logic is applied:<a href="#section-3.1-5" class="pilcrow">¶</a></p>
 <span id="name-as-example-1-in-its-resolve"></span><figure id="figure-5">
           <div class="lang-rpsl sourcecode" id="section-3.1-6.1">
 <pre>
@@ -1684,7 +1684,7 @@ members: AS65001, AS65003
         <h3 id="name-the-route-set-class-2">
 <a href="#section-3.2" class="section-number selfRef">3.2. </a><a href="#name-the-route-set-class-2" class="section-name selfRef">The route-set Class</a>
         </h3>
-<p id="section-3.2-1">When the <code>excl-members</code> attribute is populated on a route-set object, the primary keys stored in the attribute reference aut-nums, or as-sets, or route-sets, that <span class="bcp14">MUST NOT</span> be resolved when recursively resolving the members of that route-set object.<a href="#section-3.2-1" class="pilcrow">¶</a></p>
+<p id="section-3.2-1">When the <code>excl-members</code> attribute is populated on a route-set object, the primary keys stored in the attribute reference aut-nums, or as-sets, or route-sets, that <span class="bcp14">MUST NOT</span> be resolved by a resolving IRR server, when recursively resolving the members of that route-set object.<a href="#section-3.2-1" class="pilcrow">¶</a></p>
 <ol start="1" type="1" class="normal type-1" id="section-3.2-2">
 <li id="section-3.2-2.1">
             <p id="section-3.2-2.1.1">This exclusion applies to the <code>(mp-)members</code> attributes of the route-set object which has the <code>excl-members</code> attribute populated, and the <code>(mp-)members</code> attributes of all recursively resolved route-sets and as-sets within that route-set. Because the RPSL primary keys stored in the <code>excl-members</code> attribute have a registry scope prepended, the primary keys in the <code>(mp-)members</code> attributes <span class="bcp14">MUST</span> be checked against all keys in <code>excl-members</code> attribute with the registry scope removed.<a href="#section-3.2-2.1.1" class="pilcrow">¶</a></p>
@@ -1723,7 +1723,7 @@ source: ARIN
 <figcaption><a href="#figure-6" class="selfRef">Figure 6</a>:
 <a href="#name-an-example-route-set-hierar" class="selfRef">An example route-set hierarchy, in it's unresolved state</a>
           </figcaption></figure>
-<p id="section-3.2-5">The figure below shows the result of resolving the members of set <code>RS-EXAMPLE-1</code> when the <code>excl-members</code> logic is applied:<a href="#section-3.2-5" class="pilcrow">¶</a></p>
+<p id="section-3.2-5">The figure below shows the result from a resolving IRR server having resolved the members of set <code>RS-EXAMPLE-1</code> when the <code>excl-members</code> logic is applied:<a href="#section-3.2-5" class="pilcrow">¶</a></p>
 <span id="name-rs-example-1-in-its-resolve"></span><figure id="figure-7">
           <div class="lang-rpsl sourcecode" id="section-3.2-6.1">
 <pre>
